# Master_Tool_Healing

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: demo.yml  maestro-demo.yml
examples/maestro-demo/: README.md
examples/maestro-demo/flows/: login.yaml
examples/maestro-real-demo/: README.md
examples/maestro-real-demo/flows/: wifi_settings.yaml
examples/playwright-demo-js/: package-lock.json  package.json
examples/playwright-demo-js/tests/: example.spec.ts
examples/playwright-demo-python/: requirements.txt
examples/playwright-demo-python/tests/: test_example.py
src/autoheal/: __init__.py  cli.py  config.py  models.py  orchestrator.py
src/autoheal/adapters/: base.py  detect.py  maestro_adapter.py  playwright_js_adapter.py  playwright_python_adapter.py
src/autoheal/context/: collector.py  redaction.py
src/autoheal/git_ops/: branch.py  pr.py
src/autoheal/llm/: groq_client.py  prompts.py  schema.py
src/autoheal/patch/: differ.py  safety.py
src/autoheal/runner/: executor.py
tests/: test_branch.py  test_detect.py  test_differ.py  test_groq_client.py  test_maestro_adapter.py  test_orchestrator.py  test_patch_safety.py  test_playwright_js_adapter.py  test_playwright_python_adapter.py  test_prompts.py  test_redaction.py  test_schema.py
