[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoheal"
version = "0.1.0"
description = "Self-healing test automation: diagnose, fix, verify, and PR failing test scripts using an LLM."
requires-python = ">=3.10"
dependencies = [
    "groq>=0.11.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
autoheal = "autoheal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
